Refactor(engine, api-server): 방송 종료 시각 동기화 및 동시성 경합 문제 해결
[api-server]
- 세그먼트 매핑 시 중복 키로 인한 전체 배치 롤백을 막기 위해 `Collectors.toMap`에 Merge Function(방어 로직) 추가
- 방송 종료 처리 책임을 `engine`으로 일원화하고, `closeOfflineSessions` 스케줄러는 1시간 주기의 '좀비 세션 청소용'으로 역할 대폭 축소
- `updateSessionSummary` API 호출 시, `engine`이 측정한 정확한 방송 종료 시각(`endedAt`)을 수신하여 즉시 세션 및 세그먼트를 명시적으로 종료 처리하도록 수정 (타이밍 레이스 원천 차단)
- DTO(`StreamSessionSummaryRequest`) 스펙 변경에 따른 테스트 코드 갱신 완료

[engine]
- `api-server`에 넘기는 요약 데이터 통신 스펙에 이벤트 발생 시간(`endedAt`) 필드 추가
- 클린 코드 원칙을 적용하여 `sendSessionSummaryAsync` 메서드의 늘어나는 파라미터들을 `StreamSessionSummary` DTO(Record) 단일 객체로 묶어서 전달하도록 리팩토링
- DTO 및 메서드 시그니처 변경에 맞춰 `IngestionServiceTest`, `ChatEventListenerTest`, `ChatAggregationServiceTest` 등 연관 테스트 코드 전면 수정 및 검증 완료